--- a/website/package.json
+++ b/website/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "firebase": "^8.10.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.13.0",
+    "react-dom": "^16.0.3",
+    "react-firebase-hooks": "^3.0.4",
     "react-scripts": "4.0.3",
+    "react-wordcloud": "^1.2.7",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
