--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,7 @@
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^16.0.3",
     "react-firebase-hooks": "^3.0.4",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-wordcloud": "^1.2.7",
     "web-vitals": "^1.1.2"
